--- a/pom.xml
+++ b/pom.xml
@@ -37,12 +37,18 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
+		<!--  Coisa pro JPA (SQL)
 		<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-
+		</dependency>
+		
+		<dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+		</dependency>
+		--> 
 		<!-- Dependencias do JUnit -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
